--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 
     <canvas id="canvas1"></canvas>
-    <img src="../../images/player.png" id="playerImage">
-    <img src="../../images/background_single.png" id="backgroundImage">
-    <img src="../../images/enemy_1.png" id="enemyImage">
+    <img src="player.png" id="playerImage">
+    <img src="background_single.png" id="backgroundImage">
+    <img src="enemy_1.png" id="enemyImage">
 
 <button id="fullScreenButton">Toggle Full Screen</button>
 
